fix issue of nav bar wrapping on Apples

--- a/main.sass
+++ b/main.sass
@@ -120,6 +120,8 @@ nav
 		display: inline
 		padding: 0
 		list-style: none
+		// ensure nav list is not wrapped on Apple devices
+		white-space: nowrap
 		li
 			display: inline
 			padding: .5rem 0
